--- a/app/views/classrooms/quizz.html.erb
+++ b/app/views/classrooms/quizz.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= form_with url: "/courses/#{@course.id}/classrooms/#{@classroom.id}/quizz_submit" do |form| %>
+  <%= form_with url: "courses/#{@course.id}/classrooms/#{@classroom.id}/quizz_submit" do |form| %>
     <% Answer.all.each do |answer| %>
     <h3><%= answer.question.content %></h3>
     <% answer.content.split(',').each_with_index do |word, index| %>
