--- a/app/views/shared/_lesson.html.erb
+++ b/app/views/shared/_lesson.html.erb
@@ -2,6 +2,10 @@
   <h1><%= lesson.title %></h1>
   <% if lesson.media == "video" %>
     <%= cl_video_tag(lesson.content, :controls => true, :width=>940) %>
+  <% elsif lesson.media == "texte enrichi" %>
+    <div class="trix-content">
+      <%= lesson.enriched_content %>
+    </div>
   <% else %>
     <p class="medium-paragraph justify-text"><%= lesson.content %></p>
   <% end %>
