--- a/app/views/classrooms/quizz.html.erb
+++ b/app/views/classrooms/quizz.html.erb
@@ -4,7 +4,7 @@
     <h3><%= answer.question.content %></h3>
     <% answer.content.split(',').each_with_index do |word, index| %>
       <%= form.check_box :"user_answers[#{answer.id}][#{index + 1}]"%>
-      <%= form.label :"user_answers[#{index}]", word %>
+      <%= form.label :"user_answers[#{answer.id}][#{index + 1}]", word %>
       <% end %>
     <% end %>
     <%= form.submit "Validate your answers" %>
