added front to mint

--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -1,7 +1,7 @@
 .alert {
   position: fixed;
-  bottom: 16px;
-  right: 16px;
+  bottom: 4.5rem;
+  right: 1px;
   z-index: 1000;
   padding: 1rem;
   background-color: rgba($color: $neutral-200-violet, $alpha: 0.7);
