--- a/app/views/classrooms/mint_nft.html.erb
+++ b/app/views/classrooms/mint_nft.html.erb
@@ -1,16 +1,28 @@
 <div class="container" data-controller="wallet">
   <div class="minting">
     <%= image_tag "background_image_login.svg", alt: "image de fond" %>
+
     <div class="container-mint-process">
-      <div class="mint-nft">
-        <button class="btn-main clickable" data-action="click->wallet#connectWallet" data-wallet-target="connect">Connectez votre portefeuille</button>
-        <button class="btn-main clickable" data-action="click->wallet#askContractToMintNft" data-wallet-target="mintNFT">Obtenir la certification</button>
+      <div class="interact-wallet" data-wallet-target="connect">
+        <div class="header-connect">
+          <h2><%= @classroom.course.name %></h2>
+          <i class="fa-solid fa-circle-check done-lesson-classroom"></i>
+        </div>
+        <p class="medium-paragraph">Connectez votre portefeuille pour recevoir votre certificat Academint.</p>
+        <button class="btn-main clickable" data-action="click->wallet#connectWallet">Connectez votre portefeuille</button>
       </div>
-      <div class="mint-ongoing d-none" data-wallet-target="ongoing">
-        <%= render "shared/animation_mint" %>
-        <h3>La certification est en cours de création</h3>
+      <div class="interact-wallet" data-wallet-target="mintNFT">
+        <h2>Préparez votre transaction</h2>
+        <p class="medium-paragraph">Procédez à la transaction pour récupérer votre certificat Academint.</p>
+        <button class="btn-main clickable" data-action="click->wallet#askContractToMintNft">Obtenir la certification</button>
       </div>
-      <div class="opensea-link d-none" data-wallet-target="done">
+      <div class="interact-wallet d-none" data-wallet-target="ongoing">
+        <h2>Création en cours..</h2>
+        <div class="lds-ripple"><div></div><div></div></div>
+      </div>
+      <div class="interact-wallet d-none" data-wallet-target="done">
+        <h2>Votre certificat est dans votre portefeuille !</h2>
+        <i class="fa-solid fa-circle-check done-lesson-classroom"></i>
       </div>
     </div>
   </div>
