--- a/app/assets/stylesheets/components/_search_bar.scss
+++ b/app/assets/stylesheets/components/_search_bar.scss
@@ -11,6 +11,7 @@
     background-color: transparent;
     color: $neutral-1000;
     border: none;
+    font-family: $body-font;
     &:focus {
       outline: none;
     }
