--- a/app/assets/stylesheets/components/_search_bar.scss
+++ b/app/assets/stylesheets/components/_search_bar.scss
@@ -12,6 +12,7 @@
     color: $neutral-1000;
     border: none;
     font-family: $body-font;
+    width: 100%;
     &:focus {
       outline: none;
     }
