--- a/app/views/lectures/show.html.erb
+++ b/app/views/lectures/show.html.erb
@@ -4,7 +4,7 @@
       <div class='course-summary-content'>
         <% @course.chapters.each do |chapter| %>
           <h4><%= chapter.name %></h5>
-          <% @classroom.lectures.each do |lecture| %>
+          <% @classroom.lectures.order(:id).each do |lecture| %>
             <% if lecture.lesson.chapter == chapter %>
               <% if lecture.status == 'done' %>
                 <%= link_to course_classroom_lecture_path(@course, @classroom, lecture), class: "link-card" do %>
