--- a/app/assets/stylesheets/pages/mint_nft.scss
+++ b/app/assets/stylesheets/pages/mint_nft.scss
@@ -17,7 +17,7 @@ $timingFunction: ease;
     margin: auto;
     z-index: -1;
     object-fit: cover;
-    top: -5rem;
+    top: -6rem;
     left: -10rem;
   }
 }
@@ -54,6 +54,7 @@ $timingFunction: ease;
 .header-connect {
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 0 2rem;
