new smart contract with updated name, description & image

--- a/app/views/classrooms/mint_nft.html.erb
+++ b/app/views/classrooms/mint_nft.html.erb
@@ -23,6 +23,7 @@
       <div class="interact-wallet d-none" data-wallet-target="done">
         <h2>Votre certificat est dans votre portefeuille !</h2>
         <i class="fa-solid fa-circle-check done-lesson-classroom"></i>
+        <%= link_to 'Retour à votre profil', dashboard_path, class: 'btn-main' %>
       </div>
     </div>
   </div>
