--- a/app/assets/stylesheets/pages/mint_nft.scss
+++ b/app/assets/stylesheets/pages/mint_nft.scss
@@ -49,6 +49,13 @@ $timingFunction: ease;
   justify-content: space-between;
   align-items: center;
   text-align: center;
+  a {
+    margin-top: 2rem;
+  }
+  i {
+    font-size: 24px;
+    color: $green-100;
+  }
 }
 
 .header-connect {
@@ -58,13 +65,6 @@ $timingFunction: ease;
   justify-content: center;
   align-items: center;
   padding: 0 2rem;
-  h2 {
-    margin-right: 1rem;
-  }
-  i {
-    font-size: 24px;
-    color: $green-100;
-  }
 }
 
 .lds-ripple {
