--- a/app/views/classrooms/mint_nft.html.erb
+++ b/app/views/classrooms/mint_nft.html.erb
@@ -1,4 +1,4 @@
-<div class="container" data-controller="wallet">
+<div class="container" data-controller="wallet" data-wallet-url-value="<%= minted_course_classroom_path(@classroom.course, @classroom) %>">
   <div class="minting">
     <%= image_tag "background_image_login.svg", alt: "image de fond" %>
 
