--- a/app/views/lectures/show.html.erb
+++ b/app/views/lectures/show.html.erb
@@ -40,7 +40,7 @@
   <div class="container container-footer-course">
     <% if @last_course %>
       <% if @last_lecture.status == 'done' %>
-        <%= link_to 'Obtiens ton NFT', mint_nft_course_classroom_path, class: 'btn-main'%>
+        <%= link_to 'Obtiens ton NFT', mint_nft_course_classroom_path(@course, @classroom), class: 'btn-main'%>
       <% else %>
         <%= link_to 'Faire le quizz', quizz_course_classroom_lecture_path, class: 'btn-main' %>
       <% end %>
