--- a/app/views/lectures/show.html.erb
+++ b/app/views/lectures/show.html.erb
@@ -38,16 +38,21 @@
 </div>
 <div class="course-footer">
   <div class="container container-footer-course">
-    <% if @last_course %>
+    <% if @is_last_lecture && @last_lecture.lesson.questions.exists?%>
       <% if @last_lecture.status == 'done' %>
         <%= link_to 'Obtiens ton NFT', mint_nft_course_classroom_path, class: 'btn-main'%>
       <% else %>
         <%= link_to 'Faire le quizz', quizz_course_classroom_lecture_path, class: 'btn-main' %>
       <% end %>
+    <% elsif @is_last_lecture && @last_lecture.status == 'done' %>
+      <%= link_to 'Obtiens ton NFT', mint_nft_course_classroom_path, class: 'btn-main'%>
+    <% elsif @is_last_lecture %>
+      <%= link_to next_course_classroom_lecture_path(@classroom.course, @classroom), class: 'next-lesson' do %>
+        <p class="large-paragraph">J'ai fini <i class="fa-solid fa-arrow-right"></i></p>
+      <% end %>
     <% else %>
-      <%= link_to next_course_classroom_lecture_path(@classroom.course, @classroom),
-          class: 'next-lesson' do %>
-            <p class="large-paragraph">Leçon suivante <i class="fa-solid fa-arrow-right"></i></p>
+      <%= link_to next_course_classroom_lecture_path(@classroom.course, @classroom), class: 'next-lesson' do %>
+        <p class="large-paragraph">Leçon suivante <i class="fa-solid fa-arrow-right"></i></p>
       <% end %>
     <% end %>
   </div>
