added to the card on dashboard NFT certificate

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -22,6 +22,14 @@
   text-decoration: none;
 }
 
+.done-certificate {
+  color: $green-100;
+}
+
+.undone-certificate {
+  color: $neutral-800; 
+}
+
 // .card-main-img {
 //   height: 50%;
 //   img {
