--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="dashboard-container">
-    <h1>Bienvenue <%= current_user.username.downcase %> !</h1>
+    <h1>Bienvenue <%= current_user.username.capitalize %> !</h1>
     <%# <p class="paragraph-large">Tu peux retrouver toutes les informations sur tes cours et tes certifications ici.</p> %>
     <div class="dashboard">
       <div class="tabs-dashboard">
