--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -130,6 +130,9 @@
   padding: 1rem;
   transition: 0.2 ease-in-out;
   height: 10rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   h3 {
     color: $neutral-0;
     margin: 0;
