--- a/app/assets/stylesheets/pages/_show_course.scss
+++ b/app/assets/stylesheets/pages/_show_course.scss
@@ -111,3 +111,12 @@
 .justify-text {
   text-align: justify;
 }
+
+.congrats {
+  font-size: large;
+  text-align: center;
+}
+
+.congrats-strong {
+  color: $green-100;
+}
