--- a/app/views/shared/_card_dashboard_finished.html.erb
+++ b/app/views/shared/_card_dashboard_finished.html.erb
@@ -19,7 +19,7 @@
         <% if classroom.minted %>
           <i class="fa-solid fa-check done-certificate"></i>
         <% else %>
-          <i class="fa-solid fa-check undone-certificate" id="to-be-done"></i>
+          <i class="fa-solid fa-spinner undone-certificate" id="to-be-done"></i>
         <% end %>
       </div>
     </div>
