--- a/app/assets/stylesheets/pages/mint_nft.scss
+++ b/app/assets/stylesheets/pages/mint_nft.scss
@@ -56,6 +56,7 @@ $timingFunction: ease;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   padding: 0 2rem;
   h2 {
     margin-right: 1rem;
@@ -64,6 +65,10 @@ $timingFunction: ease;
     font-size: 24px;
     color: $green-100;
   }
+}
+
+#opensea {
+  margin-top: 1.5rem;
 }
 
 .lds-ripple {
