--- a/app/views/lectures/show.html.erb
+++ b/app/views/lectures/show.html.erb
@@ -10,18 +10,21 @@
                 <%= link_to course_classroom_lecture_path(@course, @classroom, lecture), class: "link-card" do %>
                   <div class="lesson-tabs">
                     <i class="fa-solid fa-circle-check done-lesson-classroom"></i>
+                    <i class="fa-solid <%= lecture.lesson.display_media %> tab-icon"></i>
                     <p class="clickable <%= 'active-tab-lesson' if @lecture == lecture %>"><%= lecture.lesson.title %></p>
                   </div>
                 <% end %>
               <% elsif lecture.status == "pending" %>
                 <div class="lesson-tabs">
                   <i class="fa-solid fa-lock disabled-link"></i>
+                  <i class="fa-solid <%= lecture.lesson.display_media %> tab-icon"></i>
                   <p class="disabled-link"><%= lecture.lesson.title%></p>
                 </div>
               <% elsif lecture.status == "ongoing" %>
                 <%= link_to course_classroom_lecture_path(@course, @classroom, lecture), class: "link-card" do %>
                 <div class="lesson-tabs">
                   <i class="fa-solid fa-spinner ongoing-lesson-classroom"></i>
+                  <i class="fa-solid <%= lecture.lesson.display_media %> tab-icon"></i>
                   <p class="clickable <%= 'active-tab-lesson' if @lecture == lecture %>"><%= lecture.lesson.title %></p>
                 </div>
                 <% end %>
@@ -45,10 +48,10 @@
         <%= link_to 'Faire le quizz', quizz_course_classroom_lecture_path, class: 'btn-main' %>
       <% end %>
     <% elsif @is_last_lecture && @last_lecture.status == 'done' %>
-        <%= link_to 'Obtiens ton NFT', mint_nft_course_classroom_path(@course, @classroom), class: 'btn-main'%>
+      <%= link_to 'Obtiens ton NFT', mint_nft_course_classroom_path, class: 'btn-main'%>
     <% elsif @is_last_lecture %>
       <%= link_to next_course_classroom_lecture_path(@classroom.course, @classroom), class: 'next-lesson' do %>
-        <p class="large-paragraph">J'ai fini <i class="fa-solid fa-arrow-right"></i></p>
+        <p class="large-paragraph">J'ai fini  <i class="fa-solid fa-arrow-right"></i></p>
       <% end %>
     <% else %>
       <%= link_to next_course_classroom_lecture_path(@classroom.course, @classroom), class: 'next-lesson' do %>
