--- a/app/views/shared/_lesson.html.erb
+++ b/app/views/shared/_lesson.html.erb
@@ -1,7 +1,9 @@
 <div class='course-display-content'>
   <h1><%= lesson.title %></h1>
   <% if lesson.media == "video" %>
-    <%= cl_video_tag(lesson.content, :controls => true, :width=>740) %>
+    <div class="course-video">
+      <%= cl_video_tag(lesson.content, :controls => true) %>
+    </div>
   <% elsif lesson.media == "texte enrichi" %>
     <div class="trix-content">
       <%= lesson.enriched_content %>
