fuck of la branche

--- a/app/assets/stylesheets/pages/_show_course.scss
+++ b/app/assets/stylesheets/pages/_show_course.scss
@@ -82,7 +82,12 @@
 }
 
 .disabled-link {
-  color: $neutral-300;
+  i {
+    color: $neutral-300;
+  }
+  p {
+    color: $neutral-300;
+  }
 }
 
 .ongoing-lesson-classroom {
