align header quizz

--- a/app/assets/stylesheets/pages/_quizz.scss
+++ b/app/assets/stylesheets/pages/_quizz.scss
@@ -13,6 +13,7 @@
     color: $neutral-0;
   }
   h3 {
+    text-align: center;
     margin-top: 0;
     margin-bottom: 2.5rem;
     color: $neutral-0;
