--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -57,7 +57,7 @@
 .dashboard-card-bottom {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
   p {
     margin: 0;
   }
@@ -71,4 +71,3 @@
   gap: 2rem;
   margin-top: 2.5rem;
 }
-
