--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
       <%= render "shared/search_bar" %>
     </div>
     <ul>
-      <li><%= link_to "Enseigner", new_course_path, class:"btn-secondary" %></li>
+      <li><%= link_to "Enseigner", root_path, class:"btn-secondary" %></li>
       <li><%= link_to 'Mes cours', dashboard_path, class: 'btn-secondary' %></li>
       <% if user_signed_in? %>
         <div class="avatar-menu" data-controller="dropdown" data-action="click->dropdown#show dropdown:click:outside->dropdown#hide">
