--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="dashboard-container">
-    <h1>Bienvenue <%= current_user.username.capitalize %> !</h1>
+    <h1>Bienvenue <%= current_user.username.titleize %> !</h1>
     <div class="dashboard" data-controller="tab-dashboard">
       <div class="tabs-dashboard">
         <ul>
